# AlertaDengueCaptura

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile-celery  Makefile  README.md  clima.py  docker-compose.yml  dockerfile  env_sample  environment-3.7.yml  environment-satellite.yml  environment.yaml  example_env_file  municipios  requirements-dev.txt  requirements.txt  settings-example.ini  setup.cfg  setup.py  tweets.py
crawlclima/: .env.tmpl  MANIFEST.in  README.md  capturachuva.py  celery.py  celeryconfig.py  crontab  environment.yml  fetchapp.py  pegatemperatura.py  pegatweets.py  pyproject.toml  settings.py  setup.cfg  setup.py  tasks.py
crawlclima/config/: cemaden.py  general.py  tweets.py
crawlclima/crawlclima/: __init__.py  capturachuva.py  celeryconfig.py  cron_tasks  fetchapp.py  models.py  municipios  pegatemperatura.py  pegatweets.py  tasks.py
crawlclima/crawlclima/config/: cemaden.py  settings.py
crawlclima/crawlclima/redemet/: rmet.py
crawlclima/docker/: Dockerfile-crawlclima  docker-compose.yml  start_cron_celery.sh
crawlclima/redemet/: rmet.py
crawlclima/redemet/tests/: example_data.txt  test_example_data.json  test_rmet.py
crawlclima/tests/: test_rmet.py  test_tasks.py  test_tweets.py
crawlclima/tests/test_data/: data_rmet_sbaf.json  example_with_no_record.txt  test_example_data.json
crawlclima/utilities/: README.md  crontab  env_sample  environment.yml  fill_counties.py  fill_estados.py  fill_stations.py  get_geosbr.py  initials.py  pega_temperatura.py  pega_tweets.py  update_mun_w_pop.py
crawlclima/utilities/csv/: CID-10-SUBCATEGORIAS.csv  CID-10.csv  DTB_2014_Municipio.csv  DTB_2021_Municipio.csv
crawlclima/utilities/dbschema/: create_db.sh  roles-infodengue_roles.sql
crawlclima/utilities/stations/: airport_stations_seed.csv  fill_cemaden_stations_table.py
crawlclima/wunderground/: clima.py  wu.py
dbschema/: dengue.sql  (+2 more)
downloader/: pyproject.toml  setup.cfg
downloader/docker/: .dockerignore
downloader/downloader_app/: README.md  celeryapp.py  celeryconfig.py  requirements.txt  run_downloader_tasks.py  shapefile_module.py  tasks.py  tiff_downloader.py  utils.py
(+118 files in other folders)
