[metadata]
license-file = LICENSE

[flake8]
max-line-length = 79
ignore = D202,D203,W503,E203, E501, F841, E731
exclude =
    downloader_app/*

[isort]
known_third_party = celery,dotenv,ee,geojson,geopandas,geoviews,httplib2,imageio,initials,matplotlib,metar,models,netCDF4,numpy,pandas,psycopg2,pydrive,pytest,rasterio,rasterstats,requests,responses,settings,setuptools,shapely,sqlalchemy,xarray,yaml
ensure_newline_before_comments=true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
