[metadata]
license_file = LICENSE

[isort]
known_third_party = celery,dotenv,downloader_app,ee,geobr,geojson,geopandas,geoviews,httplib2,imageio,initials,matplotlib,metar,netCDF4,numpy,pandas,psycopg2,pydrive,rasterio,rasterstats,requests,responses,setuptools,setuptools_scm,shapely,sqlalchemy,xarray
ensure_newline_before_comments=true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip = docs/

[flake8]
max-line-length = 79
ignore = D202,D203,W503,E203, E501, F841, E731
